# FinForensicTest

./: .env.example  README.md  __init__.py  apollo.txt  corporate_data_temp.json  motilal.txt  outputs.txt  pyproject.toml  rag_results.json  streamlit_app.py  transcript_results.json
backend/: __init__.py  preliminary_guidelines.json
corporate_reports/: Manappuram_Finance_Limited_latest.md  Reliance_Industries_Limited_20250328_121814.md  Reliance_Industries_Limited_20250328_124602.md  Reliance_Industries_Limited_20250328_152711.md  Reliance_Industries_Limited_20250328_154804.md  Reliance_Industries_Limited_20250328_171601.md  Reliance_Industries_Limited_20250328_182956.md  Reliance_Industries_Limited_latest.md
markdowns/: Apollo_Hospital_20250226_232246.md  Apollo_Hospital_latest.md  ELEM_INVESTMENTS_PRIVATE_LIMITED_20250519_231723.md  ELEM_INVESTMENTS_PRIVATE_LIMITED_latest.md  High_Grace_Investments_Pvt_Ltd_latest.md  Manappuram_Finance_Limited_20250517_155642.md  Motilal_Oswal_20250226_234113.md  Motilal_Oswal_20250226_235514.md  Motilal_Oswal_20250227_000305.md  Motilal_Oswal_20250227_034124.md  Reliance_Industries_Limited_20250328_121445.md  Reliance_Industries_Limited_20250328_124154.md  Reliance_Industries_Limited_20250328_152245.md  Reliance_Industries_Limited_20250328_154326.md  Reliance_Industries_Limited_20250328_164614.md  Reliance_Industries_Limited_20250328_171056.md  Reliance_Industries_Limited_20250328_181819.md  Reliance_Industries_Limited_20250517_153533.md  SNR_Investments_Private_Limited_20250520_030502.md  VEEYES_INVESTMENTS_PVT_LTD_latest.md
(+222 files in other folders)
