[project]
name = "fin-forensic-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "google-genai>=1.3.0",
    "google-search-results>=2.4.2",
    "langchain>=0.3.19",
    "langchain-anthropic>=0.3.8",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.39",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.3.7",
    "langgraph==0.3.2",
    "lxml>=5.3.1",
    "markdown>=3.7",
    "markdown-it-py>=3.0.0",
    "markdownify>=1.0.0",
    "mistralai>=1.6.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.42.2",
    "weasyprint>=64.1",
]
